Add Data Fetching and Use Fetched Data for Content
Implemented API call for weather that is used to populate weather
cards. Data is fetched for 3 hardcoded cities and then formatted using
array methods to be used by the WeatherPanel and WeatherCards.

In addition added an icon for web tab and removed default
create-react-app files that aren't used.

--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -48,6 +48,10 @@ html * {
   color: #61abd8;
   font-weight: 700;
 }
+.city-nav-item:hover {
+  cursor: pointer;
+  color: #61abd8;
+}
 .App-content {
   flex: 1;
   display: flex;
