--- a/weather-app/src/App.less
+++ b/weather-app/src/App.less
@@ -72,6 +72,12 @@ html * {
 
         font-weight: 700;
     }
+
+    &:hover {
+        cursor: pointer;
+        
+        color: @color-selected;
+    }
 }
 
 .App-content {
