--- a/src/App.css
+++ b/src/App.css
@@ -32,13 +32,14 @@ html * {
   display: flex;
   justify-content: center;
   width: 40vw;
+  min-width: 320px;
   height: 12vh;
 }
 .city-nav-list {
   margin: 1.5em 0;
   padding: 0;
   list-style-type: none;
-  font-size: calc(16px + 2vmin);
+  font-size: calc(16px + 1vw);
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -63,7 +64,9 @@ html * {
   position: relative;
   display: flex;
   width: 50%;
-  height: min(60vh, 800px);
+  min-width: 300px;
+  height: min(70vh, 800px);
+  min-height: 460px;
   left: 0%;
   right: 0%;
   border: 3px solid white;
@@ -122,6 +125,7 @@ html * {
 .weather-card.large .card-content {
   flex-direction: row;
   margin-top: 32px;
+  margin-bottom: 24px;
 }
 .weather-card.large .card-content-info {
   display: flex;
@@ -138,4 +142,25 @@ html * {
 }
 .card-content-info-temp {
   font-weight: 700;
+}
+@media only screen and (max-width: 1100px) {
+  .current-weather-section {
+    flex: 0;
+  }
+  .upcoming-weather-section {
+    flex-direction: column;
+  }
+  .upcoming-weather-section .weather-card {
+    flex-direction: row;
+    padding: 6px;
+  }
+  .upcoming-weather-section .card-content {
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+  }
+  .upcoming-weather-section .card-content-info {
+    margin: 0 32px;
+  }
 }
