Add Style Tweaks

--- a/src/App.less
+++ b/src/App.less
@@ -92,7 +92,7 @@ html * {
     
     width: 50%;
     min-width: 300px;
-    height: min(70vh, 800px);
+    height: 70vh;
     min-height: 460px;
     left: 50% - 50vh;
     right: 50% - 50vh;
@@ -203,7 +203,7 @@ html * {
 
 @media only screen and (max-width: 800px) {
   .current-weather-section {
-    flex: 0;
+    flex: 2;
   }
   
   .upcoming-weather-section {
