--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ html * {
   display: flex;
   width: 50%;
   min-width: 300px;
-  height: min(70vh, 800px);
+  height: 70vh;
   min-height: 460px;
   left: 0%;
   right: 0%;
@@ -150,7 +150,7 @@ html * {
 }
 @media only screen and (max-width: 800px) {
   .current-weather-section {
-    flex: 0;
+    flex: 2;
   }
   .upcoming-weather-section {
     flex-direction: column;
